@@ -17,7 +17,6 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import javax.annotation.Nullable;
-import javax.persistence.LockModeType;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -40,6 +39,7 @@ import com.sedmelluq.discord.lavaplayer.track.AudioItem;
 import com.sedmelluq.discord.lavaplayer.track.AudioPlaylist;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrackInfo;
+import jakarta.persistence.LockModeType;
 import net.robinfriedli.aiode.Aiode;
 import net.robinfriedli.aiode.audio.AudioTrackLoader;
 import net.robinfriedli.aiode.audio.spotify.SpotifyTrack;
@@ -132,6 +132,95 @@ public class YouTubeService extends AbstractShutdownable {
         currentQuota.set(quota);
     }
 
+    interface YouTubeVideoSearchResult {
+        String getId();
+
+        String getTitle();
+
+        long getDuration();
+
+        @Nullable
+        String getChannelTitle();
+
+        long getViewCount();
+    }
+
+    class VideoDelegate implements YouTubeVideoSearchResult {
+        private final Video video;
+
+        VideoDelegate(Video video) {
+            this.video = video;
+        }
+
+        @Override
+        public String getId() {
+            return video.getId();
+        }
+
+        @Override
+        public String getTitle() {
+            return video.getSnippet().getTitle();
+        }
+
+        @Override
+        public long getDuration() {
+            return parseDuration(video);
+        }
+
+        @Nullable
+        @Override
+        public String getChannelTitle() {
+            VideoSnippet snippet = getVideo().getSnippet();
+            if (snippet != null) {
+                return snippet.getChannelTitle();
+            }
+            return null;
+        }
+
+        @Override
+        public long getViewCount() {
+            return YouTubeService.this.getViewCount(video);
+        }
+
+        public Video getVideo() {
+            return video;
+        }
+    }
+
+    static class AudioTrackSearchResult implements YouTubeVideoSearchResult {
+        private final AudioTrack audioTrack;
+
+        AudioTrackSearchResult(AudioTrack audioTrack) {
+            this.audioTrack = audioTrack;
+        }
+
+        @Override
+        public String getId() {
+            return audioTrack.getIdentifier();
+        }
+
+        @Override
+        public String getTitle() {
+            return audioTrack.getInfo().title;
+        }
+
+        @Override
+        public long getDuration() {
+            return audioTrack.getDuration();
+        }
+
+        @Nullable
+        @Override
+        public String getChannelTitle() {
+            return audioTrack.getInfo().author;
+        }
+
+        @Override
+        public long getViewCount() {
+            return 0;
+        }
+    }
+
     /**
      * Workaround as Spotify does not allow full playback of tracks via third party APIs using the web api for licencing
      * reasons. Gets the metadata and searches the corresponding YouTube video. The only way to stream from Spotify
@@ -157,7 +246,7 @@ public class YouTubeService extends AbstractShutdownable {
         SpotifyTrack spotifyTrack = youTubeVideo.getRedirectedSpotifyTrack();
 
         if (spotifyTrack == null) {
-            throw new IllegalArgumentException(youTubeVideo.toString() + " is not a placeholder for a redirected Spotify Track");
+            throw new IllegalArgumentException(youTubeVideo + " is not a placeholder for a redirected Spotify Track");
         }
 
         StringList artists = spotifyTrack.exhaustiveMatch(
@@ -172,8 +261,8 @@ public class YouTubeService extends AbstractShutdownable {
             }
         );
         String searchTerm = spotifyTrack.getName() + " " + artists.toSeparatedString(" ");
-        List<String> videoIds;
 
+        YouTubeVideoSearchResult video;
         if (currentQuota.get() < quotaThreshold) {
             YouTube.Search.List search = youTube.search().list(List.of("id", "snippet"));
             search.setKey(apiKey);
@@ -181,7 +270,7 @@ public class YouTubeService extends AbstractShutdownable {
             // set topic to filter results to music video
             search.setTopicId("/m/04rlf");
             search.setType(List.of("video"));
-            search.setFields("items(snippet/title,id/videoId)");
+            search.setPart(List.of("id", "snippet"));
             search.setMaxResults((long) REDIRECT_SEARCH_AMOUNT);
 
             List<SearchResult> items = doWithQuota(QUOTA_COST_SEARCH, () -> search.execute().getItems());
@@ -190,7 +279,14 @@ public class YouTubeService extends AbstractShutdownable {
                 return;
             }
 
-            videoIds = items.stream().map(item -> item.getId().getVideoId()).collect(Collectors.toList());
+            List<String> videoIds = items.stream().map(item -> item.getId().getVideoId()).collect(Collectors.toList());
+            List<Video> videos = getAllVideos(videoIds);
+            if (videos.isEmpty()) {
+                youTubeVideo.cancel();
+                return;
+            }
+
+            video = getBestMatch(videos.stream().map(VideoDelegate::new).toList(), spotifyTrack, artists);
         } else {
             AudioTrackLoader audioTrackLoader = new AudioTrackLoader(Aiode.get().getAudioManager().getPlayerManager());
             AudioItem audioItem;
@@ -201,12 +297,11 @@ public class YouTubeService extends AbstractShutdownable {
                 return;
             }
 
-            if (!(audioItem instanceof AudioPlaylist)) {
+            if (!(audioItem instanceof AudioPlaylist resultList)) {
                 youTubeVideo.cancel();
                 return;
             }
 
-            AudioPlaylist resultList = (AudioPlaylist) audioItem;
             List<AudioTrack> tracks = resultList.getTracks();
 
             if (tracks.isEmpty()) {
@@ -215,24 +310,14 @@ public class YouTubeService extends AbstractShutdownable {
             }
 
             List<AudioTrack> audioTracks = tracks.subList(0, Math.min(tracks.size(), REDIRECT_SEARCH_AMOUNT));
-            videoIds = audioTracks.stream().map(AudioTrack::getIdentifier).collect(Collectors.toList());
+            video = getBestMatch(audioTracks.stream().map(AudioTrackSearchResult::new).toList(), spotifyTrack, artists);
         }
-
-        List<Video> videos = getAllVideos(videoIds);
-        if (videos.isEmpty()) {
-            youTubeVideo.cancel();
-            return;
-        }
-
-        Video video = getBestMatch(videos, spotifyTrack, artists);
-        String videoId = video.getId();
-        long durationMillis = getDurationMillis(videoId);
 
         String artistString = artists.toSeparatedString(", ");
         String title = spotifyTrack.getName() + " by " + artistString;
         youTubeVideo.setTitle(title);
-        youTubeVideo.setId(videoId);
-        youTubeVideo.setDuration(durationMillis);
+        youTubeVideo.setId(video.getId());
+        youTubeVideo.setDuration(video.getDuration());
     }
 
     /**
@@ -253,7 +338,7 @@ public class YouTubeService extends AbstractShutdownable {
             VideoListResponse videoListResponse = doWithQuota(QUOTA_COST_LIST, () -> youTube.videos().list(List.of("snippet", "contentDetails"))
                 .setKey(apiKey)
                 .setId(List.of(videoId))
-                .setFields("items(snippet/title,contentDetails/duration)")
+                .setPart(List.of("snippet", "contentDetails"))
                 .setMaxResults(1L)
                 .execute());
             Video video = videoListResponse.getItems().get(0);
@@ -321,7 +406,7 @@ public class YouTubeService extends AbstractShutdownable {
             .list(List.of("contentDetails"))
             .setKey(apiKey)
             .setId(List.of(playlistId))
-            .setFields("items(contentDetails/itemCount)")
+            .setPart(List.of("contentDetails"))
             .setMaxResults(1L)
             .execute()
             .getItems()
@@ -386,11 +471,14 @@ public class YouTubeService extends AbstractShutdownable {
      * @param playlist the playlist for which to load the data of the individual videos
      */
     public void populateList(YouTubePlaylist playlist) throws IOException {
+        if (playlist.isPreLoaded()) {
+            return;
+        }
         if (currentQuota.get() < quotaThreshold) {
             YouTube.PlaylistItems.List itemSearch = youTube.playlistItems().list(List.of("snippet"));
             itemSearch.setKey(apiKey);
             itemSearch.setMaxResults(50L);
-            itemSearch.setFields("items(snippet/title,snippet/resourceId),nextPageToken");
+            itemSearch.setPart(List.of("snippet"));
             itemSearch.setPlaylistId(playlist.getId());
 
             String nextPageToken;
@@ -545,7 +633,7 @@ public class YouTubeService extends AbstractShutdownable {
         if (currentQuota.get() < quotaThreshold) {
             YouTube.Videos.List videoRequest = youTube.videos().list(List.of("snippet"));
             videoRequest.setId(List.of(id));
-            videoRequest.setFields("items(contentDetails/duration,snippet/title)");
+            videoRequest.setPart(List.of("contentDetails", "snippet"));
             videoRequest.setKey(apiKey);
             videoRequest.setMaxResults(1L);
             List<Video> items = doWithQuota(QUOTA_COST_LIST, () -> videoRequest.execute().getItems());
@@ -555,7 +643,7 @@ public class YouTubeService extends AbstractShutdownable {
             }
 
             Video video = items.get(0);
-            return new YouTubeVideoImpl(video.getSnippet().getTitle(), id, getDurationMillis(id));
+            return new YouTubeVideoImpl(video.getSnippet().getTitle(), id, parseDuration(video));
         } else {
             AudioTrackLoader audioTrackLoader = new AudioTrackLoader(Aiode.get().getAudioManager().getPlayerManager());
             AudioItem result;
@@ -565,9 +653,7 @@ public class YouTubeService extends AbstractShutdownable {
                 return null;
             }
 
-            if (result instanceof AudioTrack) {
-                AudioTrack track = (AudioTrack) result;
-
+            if (result instanceof AudioTrack track) {
                 YouTubeVideo youTubeVideo = new YouTubeVideoImpl(track.getInfo().title, track.getIdentifier(), track.getDuration());
                 youTubeVideo.setCached(track);
                 return youTubeVideo;
@@ -588,54 +674,77 @@ public class YouTubeService extends AbstractShutdownable {
      * @throws IOException             if the YouTube API request fails
      */
     public YouTubePlaylist playlistForId(String id) throws IOException {
-        YouTube.Playlists.List playlistRequest = youTube.playlists().list(List.of("snippet", "contentDetails"));
-        playlistRequest.setId(List.of(id));
-        playlistRequest.setFields("items(contentDetails/itemCount,snippet/title,snippet/channelTitle)");
-        playlistRequest.setKey(apiKey);
-        List<Playlist> items = doWithQuota(QUOTA_COST_LIST, () -> playlistRequest.execute().getItems());
+        if (currentQuota.get() < quotaThreshold) {
+            YouTube.Playlists.List playlistRequest = youTube.playlists().list(List.of("snippet", "contentDetails"));
+            playlistRequest.setId(List.of(id));
+            playlistRequest.setPart(List.of("contentDetails", "snippet"));
+            playlistRequest.setKey(apiKey);
+            List<Playlist> items = doWithQuota(QUOTA_COST_LIST, () -> playlistRequest.execute().getItems());
 
-        if (items.isEmpty()) {
-            throw new NoResultsFoundException(String.format("No YouTube playlist found for id '%s'", id));
+            if (items.isEmpty()) {
+                throw new NoResultsFoundException(String.format("No YouTube playlist found for id '%s'", id));
+            }
+
+            Playlist playlist = items.get(0);
+            List<HollowYouTubeVideo> videoPlaceholders = Lists.newArrayList();
+            for (int i = 0; i < playlist.getContentDetails().getItemCount(); i++) {
+                videoPlaceholders.add(new HollowYouTubeVideo(this));
+            }
+
+            return new YouTubePlaylist(playlist.getSnippet().getTitle(), id, playlist.getSnippet().getChannelTitle(), videoPlaceholders);
+        } else {
+            AudioTrackLoader audioTrackLoader = new AudioTrackLoader(Aiode.get().getAudioManager().getPlayerManager());
+            AudioItem result;
+            try {
+                result = audioTrackLoader.loadByIdentifier(String.format("https://www.youtube.com/playlist?list=%s", id));
+            } catch (FriendlyException e) {
+                throw new NoResultsFoundException(String.format("No YouTube playlist found for id '%s'", id));
+            }
+
+            if (result instanceof AudioPlaylist audioPlaylist) {
+                List<HollowYouTubeVideo> videos = Lists.newArrayList();
+                List<AudioTrack> tracks = audioPlaylist.getTracks();
+
+                for (AudioTrack track : tracks) {
+                    HollowYouTubeVideo video = new HollowYouTubeVideo(this);
+
+                    video.setTitle(track.getInfo().title);
+                    video.setId(track.getIdentifier());
+                    video.setDuration(track.getDuration());
+                    video.setCached(track);
+                    videos.add(video);
+                }
+
+                return new YouTubePlaylist(audioPlaylist.getName(), id, "", videos, true);
+            } else {
+                throw new NoResultsFoundException(String.format("No YouTube playlist found for id '%s'", id));
+            }
         }
-
-        Playlist playlist = items.get(0);
-
-        List<HollowYouTubeVideo> videoPlaceholders = Lists.newArrayList();
-        for (int i = 0; i < playlist.getContentDetails().getItemCount(); i++) {
-            videoPlaceholders.add(new HollowYouTubeVideo(this));
-        }
-
-        return new YouTubePlaylist(playlist.getSnippet().getTitle(), id, playlist.getSnippet().getChannelTitle(), videoPlaceholders);
     }
 
-    private Video getBestMatch(List<Video> videos, SpotifyTrack spotifyTrack, StringList artists) {
-        Video video;
+    private YouTubeVideoSearchResult getBestMatch(List<? extends YouTubeVideoSearchResult> videos, SpotifyTrack spotifyTrack, StringList artists) {
+        YouTubeVideoSearchResult video;
         int size = videos.size();
         if (size == 1) {
             video = videos.get(0);
         } else {
-            Map<Integer, Video> videosByScore = new HashMap<>();
-            Map<Video, Integer> editDistanceMap = new HashMap<>();
+            Map<Integer, YouTubeVideoSearchResult> videosByScore = new HashMap<>();
+            Map<YouTubeVideoSearchResult, Integer> editDistanceMap = new HashMap<>();
             long[] viewCounts = new long[size];
             for (int i = 0; i < size; i++) {
-                Video v = videos.get(i);
-                viewCounts[i] = getViewCount(v);
+                YouTubeVideoSearchResult v = videos.get(i);
+                viewCounts[i] = v.getViewCount();
                 editDistanceMap.put(v, getBestEditDistance(spotifyTrack, v));
             }
 
             int index = 0;
-            for (Video v : videos) {
+            for (YouTubeVideoSearchResult v : videos) {
                 int artistMatchScore = 0;
                 if (artists.stream().anyMatch(a -> {
                     String artist = a.toLowerCase();
                     String artistNoSpace = artist.replaceAll(" ", "");
-                    VideoSnippet snippet = v.getSnippet();
 
-                    if (snippet == null) {
-                        return false;
-                    }
-
-                    String channelTitle = snippet.getChannelTitle();
+                    String channelTitle = v.getChannelTitle();
 
                     if (channelTitle == null) {
                         return false;
@@ -648,7 +757,7 @@ public class YouTubeService extends AbstractShutdownable {
                     artistMatchScore = ARTIST_MATCH_SCORE_MULTIPLIER * size;
                 }
 
-                long viewCount = getViewCount(v);
+                long viewCount = v.getViewCount();
                 int editDistance = editDistanceMap.get(v);
                 long viewRank = Arrays.stream(viewCounts).filter(c -> viewCount < c).count();
                 long editDistanceRank = editDistanceMap.values().stream().filter(d -> d < editDistance).count();
@@ -669,10 +778,10 @@ public class YouTubeService extends AbstractShutdownable {
         return video;
     }
 
-    private int getBestEditDistance(SpotifyTrack spotifyTrack, Video video) {
+    private int getBestEditDistance(SpotifyTrack spotifyTrack, YouTubeVideoSearchResult video) {
         LevenshteinDistance levenshteinDistance = LevenshteinDistance.getDefaultInstance();
         String trackName = spotifyTrack.getName().toLowerCase().trim().replaceAll("\\s+", " ");
-        String videoTitle = video.getSnippet().getTitle().toLowerCase().trim().replaceAll("\\s+", " ");
+        String videoTitle = video.getTitle().toLowerCase().trim().replaceAll("\\s+", " ");
         return spotifyTrack.exhaustiveMatch(
             track -> {
                 ArtistSimplified[] artists = track.getArtists();
@@ -764,7 +873,7 @@ public class YouTubeService extends AbstractShutdownable {
         YouTube.Search.List search = youTube.search().list(List.of("id", "snippet"));
         search.setQ(searchTerm);
         search.setType(List.of("video"));
-        search.setFields("items(snippet/title,id/videoId)");
+        search.setPart(List.of("snippet", "id"));
         search.setMaxResults(limit);
         search.setKey(apiKey);
 
@@ -781,7 +890,7 @@ public class YouTubeService extends AbstractShutdownable {
         YouTube.Videos.List query = youTube.videos().list(List.of("snippet", "contentDetails", "statistics"))
             .setKey(apiKey)
             .setId(videoIds)
-            .setFields("items(snippet/title,snippet/channelTitle,id,contentDetails/duration,statistics/viewCount)")
+            .setPart(List.of("snippet", "contentDetails", "statistics"))
             .setMaxResults(50L);
 
         String nextPageToken;
@@ -810,7 +919,7 @@ public class YouTubeService extends AbstractShutdownable {
         playlistSearch.setKey(apiKey);
         playlistSearch.setQ(searchTerm);
         playlistSearch.setType(List.of("playlist"));
-        playlistSearch.setFields("items(id/playlistId,snippet/title,snippet/channelTitle)");
+        playlistSearch.setPart(List.of("id", "snippet"));
         playlistSearch.setMaxResults(limit);
 
         List<SearchResult> items = doWithQuota(QUOTA_COST_SEARCH, () -> playlistSearch.execute().getItems());
@@ -885,7 +994,7 @@ public class YouTubeService extends AbstractShutdownable {
         YouTube.Videos.List videosRequest = youTube.videos().list(List.of("contentDetails"));
         videosRequest.setKey(apiKey);
         videosRequest.setId(List.of(videoId));
-        videosRequest.setFields("items(contentDetails/duration)");
+        videosRequest.setPart(List.of("contentDetails"));
         VideoListResponse videoListResponse = doWithQuota(QUOTA_COST_LIST, videosRequest::execute);
         List<Video> items = videoListResponse.getItems();
         if (items.size() == 1) {
@@ -904,7 +1013,7 @@ public class YouTubeService extends AbstractShutdownable {
         YouTube.Videos.List videosRequest = youTube.videos().list(List.of("contentDetails"));
         videosRequest.setKey(apiKey);
         videosRequest.setId(videoIds);
-        videosRequest.setFields("items(contentDetails/duration,id)");
+        videosRequest.setPart(List.of("id", "contentDetails"));
         List<Video> videos = doWithQuota(QUOTA_COST_LIST, () -> videosRequest.execute().getItems());
 
         Map<String, Long> durationMap = new HashMap<>();
